--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]
 [tool.poetry.dependencies]
 python = "*"
 pyqt5 = "^5.10"
+sip = "^4.19"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
